--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>com.mypackage.MyClass</mainClass>
+							<mainClass>com.lyonbank.LyonBank.LyonBankApplication</mainClass>
 						</manifest>
 					</archive>
 					<skip>true</skip>
