--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.datasource.username=root
 spring.datasource.password=0JOG60PmzIjMdawiiWIz
 spring.jpa.hibernate.ddl-auto=update
 
+#JWT
+security.jwt.secret=ghk45jgherogho834go3h4g
+security.jwt.issuer=Main
+#This session is still available for one week.
+security.jwt.ttlMillis=604800000
+
